--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="hero-content fade-in">
-            <h1><span>Sonny Sayi Solutions</span> Builds <span>Experiences</span> That Work</h1>
-            <p>Web & Graphic Design. Networking. IT Consultancy. Made to move with the future.</p>
-            <p>No business is too small for the web. A modern website builds trust, runs 24/7, and turns visitors into customers.</p>
-            <p>Discover the Sonny Sayi I.T. Solutions portfolio, featuring websites, branding, and IT projects created to help businesses thrive online.</p>
+            <h1><span>Sonny Sayi Solutions</span> Builds <span>Digital Foundations</span> That Drive Growth</h1>
+            <p>We help Kenyan small and medium businesses replace uncertainty with clarity—through clean, fast, and purpose-built digital systems.</p>
+            <p>A modern website isn’t a luxury—it’s your 24/7 sales representative, brand ambassador, and operational hub. Done right, it boosts credibility, captures leads, and scales with your ambitions.</p>
+            <p>Explore proven solutions in web development, IT infrastructure, and digital strategy—designed for real-world productivity, not just aesthetics.</p>
             <div class="hero-btns">
                 <a href="service.html" class="btn">View Our Services</a>
-                <a href="#pricing" class="btn btn-outline">See Pricing</a>
+                <a href="#pricing" class="btn btn-outline">See Transparent Pricing</a>
             </div>
         </div>
     </section>
@@ -105,7 +105,7 @@
                         <i class="fas fa-network-wired"></i>
                     </div>
                     <h3>Secure Network Infrastructure</h3>
-                    <p>Reliable, scalable office networks with structured cabling, secure Wi-Fi, and remote access—so your team works without interruptions.</p>
+                    <p>Reliable, scalable networks with structured cabling, secure Wi-Fi, and remote access—so your team works without interruptions.</p>
                 </div>
                 <div class="service-card fade-in">
                     <div class="service-icon">
@@ -119,116 +119,117 @@
     </section>
 
     <!-- Pricing Section -->
-    <section class="section pricing parallax" id="pricing">
-        <div class="overlay"></div>
-        <div class="content">
-            <div class="section-title">
-                <h2>Simple & Transparent Pricing</h2>
-                <p>Straightforward packages for all your digital needs</p>
-            </div>
-            <div class="pricing-grid">
+                    <section class="section pricing parallax" id="pricing">
+                        <div class="overlay"></div>
+                        <div class="content">
+                            <div class="section-title">
+                                <h2>Clear, Value-Backed Pricing</h2>
+                                <p>Transparent investment—no hidden costs, no filler features.</p>
+                            </div>
+                            <div class="pricing-grid">
 
-                <!-- Basic Website -->
-                <div class="pricing-card fade-in">
-                    <h3>Basic Website</h3>
-                    <div class="price"><span>From</span> 45,000 <span>Kshs</span></div>
-                    <p>Your essential online presence—fast, mobile-ready, and lead-generating.</p>
-                    <ul>
-                        <li><i class="fas fa-check"></i> <strong>7 purpose-built pages</strong>—clear messaging that converts visitors in under 10 seconds.</li>
-                        <li><i class="fas fa-check"></i> <strong>Mobile-first architecture</strong>—optimized for Kenyan 4G networks; loads in under 2 seconds.</li>
-                        <li><i class="fas fa-check"></i> <strong>Always-on lead capture</strong>—contact form + WhatsApp button to never miss an inquiry.</li>
-                        <li><i class="fas fa-check"></i> <strong>Professional email integration</strong>—project a credible image with your@business.co.ke.</li>
-                        <li><i class="fas fa-check"></i> <strong>Foundational SEO</strong>—proper metadata, clean URLs, and sitemap so Google finds you.</li>
-                        <li><i class="fas fa-check"></i> <strong>Simple self-management</strong>—update content anytime without developer fees.</li>
-                    </ul>
-                    <a href="contact.html" class="btn">Get Started</a>
-                </div>
+                                <!-- Basic Website -->
+                                <div class="pricing-card fade-in">
+                                    <h3>Basic Website</h3>
+                                    <div class="price"><span>From</span> 45,000 <span>Kshs</span></div>
+                                    <p>Essential online presence—fast, mobile-ready, lead-generating.</p>
+                                    <ul class="features-list">
+                                        <li><i class="fas fa-check"></i> <strong>7 purpose-built pages</strong> — Home, About, Services, Contact, etc.</li>
+                                        <li><i class="fas fa-check"></i> <strong>Mobile-optimized</strong> — loads in under 2s on Kenyan 4G</li>
+                                        <li><i class="fas fa-check"></i> <strong>WhatsApp + contact form</strong> — capture leads 24/7</li>
+                                        <li><i class="fas fa-check"></i> <strong>Basic SEO</strong> — metadata & sitemap for Google visibility</li>
+                                    </ul>
+                                    <ul class="features-list extra-features" style="display: none;">
+                                        <li><i class="fas fa-check"></i> <strong>Easy self-updates</strong> — no developer needed for content changes</li>
+                                        <li><i class="fas fa-check"></i> <strong>Professional email setup</strong> — use your@business.co.ke</li>
+                                        <li><i class="fas fa-check"></i> <strong>Secure cloud hosting</strong> — fast, reliable, included</li>
+                                    </ul>
+                                    <button class="view-more-btn" aria-expanded="false">
+                                        <span>View More Features</span>
+                                        <i class="fas fa-chevron-down"></i>
+                                    </button>
+                                    <a href="contact.html" class="btn">Get Started</a>
+                                </div>
 
-                <!-- Business Website -->
-                <div class="pricing-card popular fade-in">
-                    <div class="popular-badge">Most Popular</div>
-                    <h3>Business Website</h3>
-                    <div class="price"> <span>From</span> 60,000 <span>Kshs</span></div>
-                    <p>For businesses ready to stand out, rank higher, and convert more visitors.</p>
-                    <ul>
-                        <li><i class="fas fa-check"></i> Up to 10 Pages</li>
-                        <li><i class="fas fa-check"></i> Custom Design</li>
-                        <li><i class="fas fa-check"></i> SEO Optimization</li>
-                        <li><i class="fas fa-check"></i> Contact Form with WhatsApp</li>
-                        <li><i class="fas fa-check"></i> Google Maps Integration</li>
-                    </ul>
-                    <a href="contact.html" class="btn">Get Started</a>
-                </div>
+                                <!-- Business Website -->
+                                <div class="pricing-card popular fade-in">
+                                    <div class="popular-badge">Most Popular</div>
+                                    <h3>Business Website</h3>
+                                    <div class="price"><span>From</span> 60,000 <span>Kshs</span></div>
+                                    <p>For credibility, local SEO, and higher conversions.</p>
+                                    <ul class="features-list">
+                                        <li><i class="fas fa-check"></i> <strong>Up to 15 custom pages</strong> — showcase services, portfolio, FAQs</li>
+                                        <li><i class="fas fa-check"></i> <strong>Brand-aligned design</strong> — your colors, fonts, and tone</li>
+                                        <li><i class="fas fa-check"></i> <strong>Advanced local SEO</strong> — rank for “in Nairobi” or “near me”</li>
+                                        <li><i class="fas fa-check"></i> <strong>Google Maps + social proof</strong> — build trust with real presence</li>
+                                    </ul>
+                                    <ul class="features-list extra-features" style="display: none;">
+                                        <li><i class="fas fa-check"></i> <strong>Clean, secure code</strong> — no bloated templates or plugins</li>
+                                        <li><i class="fas fa-check"></i> <strong>Secure cloud hosting</strong> — fast, reliable, included</li>
+                                        <li><i class="fas fa-check"></i> <strong>Ongoing support options</strong> — choose a maintenance plan</li>
+                                    </ul>
+                                    <button class="view-more-btn" aria-expanded="false">
+                                        <span>View More Features</span>
+                                        <i class="fas fa-chevron-down"></i>
+                                    </button>
+                                    <a href="contact.html" class="btn">Get Started</a>
+                                </div>
 
-                <!-- E-commerce Website -->
-                <div class="pricing-card fade-in">
-                    <h3>E-commerce Website</h3>
-                    <div class="price"> <span> From</span> 60,000 <span>Kshs</span></div>
-                    <p>For online stores and product sales</p>
-                    <ul>
-                        <li><i class="fas fa-check"></i> Up to 50 Products</li>
-                        <li><i class="fas fa-check"></i> Secure Payment Gateway</li>
-                        <li><i class="fas fa-check"></i> Inventory Management</li>
-                        <li><i class="fas fa-check"></i> Customer Accounts</li>
-                        <li><i class="fas fa-check"></i> Order Tracking</li>
-                    </ul>
-                    <a href="contact.html" class="btn">Get Started</a>
-                </div>
-                  <div class="pricing-card fade-in">
-                    <h3>Custom Web Appliations</h3>
-                    <div class="price"> <span> From</span>80,000 <span>Kshs</span></div>
-                    <p>For unique business systems or tools</p>
-                    <ul>
-                        <li><i class="fas fa-check"></i> <strong>Tailored to your operations</strong>—whether it’s lead tracking, property management, or shop inventory.</li>
-                        <li><i class="fas fa-check"></i> <strong>Role-based dashboards</strong>—admins, staff, and managers see only what they need.</li>
-                        <li><i class="fas fa-check"></i> <strong>Secure user authentication</strong>—protect sensitive data with Firebase-backed login.</li>
-                        <li><i class="fas fa-check"></i> <strong>Real-time reporting</strong>—track performance, bottlenecks, and opportunities daily.</li>
-                        <li><i class="fas fa-check"></i> <strong>API-ready architecture</strong>—connect to email, SMS, or future tools as you grow.</li>
-                        <li><i class="fas fa-check"></i> <strong>Designed for Kenya</strong>—low-bandwidth friendly, .co.ke domain compatible, and locally hosted options.</li>
-                    </ul>
-                    <a href="contact.html" class="btn">Get Started</a>
-                </div>
-            </div>
-        </div>
-    </section>
+                                <!-- E-commerce Website -->
+                                <div class="pricing-card fade-in">
+                                    <h3>E-commerce Website</h3>
+                                    <div class="price"><span>From</span> 180,000 <span>Kshs</span></div>
+                                    <p>Your 24/7 online store—secure, local, and scalable.</p>
+                                    <ul class="features-list">
+                                        <li><i class="fas fa-check"></i> <strong>200+ products</strong> — manage inventory, pricing, images</li>
+                                        <li><i class="fas fa-check"></i> <strong>M-Pesa + card payments</strong> — trusted, secure checkout</li>
+                                        <li><i class="fas fa-check"></i> <strong>Live stock sync</strong> — prevent overselling</li>
+                                        <li><i class="fas fa-check"></i> <strong>Customer accounts</strong> — faster reorders, loyalty</li>
+                                    </ul>
+                                    <ul class="features-list extra-features" style="display: none;">
+                                        <li><i class="fas fa-check"></i> <strong>No monthly fees</strong> — you own the store outright</li>
+                                        <li><i class="fas fa-check"></i> <strong>SEO-optimized</strong> — rank for product searches</li>
+                                        <li><i class="fas fa-check"></i> <strong>Discounts & promotions</strong> — run sales and coupons</li>
+                                        <li><i class="fas fa-check"></i> <strong>Analytics integration</strong> — track sales and traffic</li>
+                                        <li><i class="fas fa-check"></i> <strong>Comprehensive training</strong> — manage independently</li>
+                                        <li><i class="fas fa-check"></i> <strong>Secure cloud hosting</strong> — included</li>
+                                    </ul>
+                                    <button class="view-more-btn" aria-expanded="false">
+                                        <span>View More Features</span>
+                                        <i class="fas fa-chevron-down"></i>
+                                    </button>
+                                    <a href="contact.html" class="btn">Get Started</a>
+                                </div>
 
-    <!-- Portfolio Section -->
-    <section class="section portfolio parallax" id="portfolio">
-        <div class="overlay"></div>
-        <div class="content">
-            <div class="section-title">
-                <h2>Our Featured Projects</h2>
-                <p>Explore our latest work and client success stories</p>
-            </div>
-            <div class="portfolio-grid">
-                <div class="portfolio-card fade-in">
-                    <img src="assets/pasi dental.png" alt="Pasi Dental" class="portfolio-img">
-                    <div class="portfolio-overlay">
-                        <h3>Pasi Dental Clinic</h3>
-                        <p>Professional website with appointment booking and service showcase.</p>
-                        <a href="https://pasidentalcare.co.ke" target="_blank" class="portfolio-link">View Project <i class="fas fa-external-link-alt"></i></a>
-                    </div>
-                </div>
-                <div class="portfolio-card fade-in">
-                    <img src="assets/geotronics.PNG" alt="Geotronics Engineering" class="portfolio-img">
-                    <div class="portfolio-overlay">
-                        <h3>Geotronics Engineering</h3>
-                        <p>Corporate site for borehole drilling company with service showcase.</p>
-                        <a href="https://geotronics.co.ke/" target="_blank" class="portfolio-link">View Project <i class="fas fa-external-link-alt"></i></a>
-                    </div>
-                </div>
-                <div class="portfolio-card fade-in">
-                    <img src="assets/eyeonproperty.png" alt="Eye On Property" class="portfolio-img">
-                    <div class="portfolio-overlay">
-                        <h3>Eye On Property</h3>
-                        <p>Real estate and Design website .</p>
-                        <a href="https://eyeonproperty.co.ke" target="_blank" class="portfolio-link">View Project <i class="fas fa-external-link-alt"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+                                <!-- Custom Web Applications -->
+                                <div class="pricing-card fade-in">
+                                    <h3>Custom Web Applications</h3>
+                                    <div class="price"><span>From</span> 250,000 <span>Kshs</span></div>
+                                    <p>Digital systems built around your unique workflow.</p>
+                                    <ul class="features-list">
+                                        <li><i class="fas fa-check"></i> <strong>Built for your business</strong> — property, dealership, or shop operations</li>
+                                        <li><i class="fas fa-check"></i> <strong>Role-based dashboards</strong> — staff see only what they need</li>
+                                        <li><i class="fas fa-check"></i> <strong>Real-time reporting</strong> — track leads, sales, inventory daily</li>
+                                        <li><i class="fas fa-check"></i> <strong>Secure login & data</strong> — Firebase-backed authentication</li>
+                                    </ul>
+                                    <ul class="features-list extra-features" style="display: none;">
+                                        <li><i class="fas fa-check"></i> <strong>API-ready</strong> — connect to SMS, email, or future tools</li>
+                                        <li><i class="fas fa-check"></i> <strong>Full training & docs</strong> — your team uses it independently</li>
+                                        <li><i class="fas fa-check"></i> <strong>Cloud hosting</strong> — reliable uptime and fast load times</li>
+                                        <li><i class="fas fa-check"></i> <strong>Data backup & recovery</strong> — protect critical business data</li>
+                                        <li><i class="fas fa-check"></i> <strong>Integration capabilities</strong> — connect with existing tools</li>
+                                        <li><i class="fas fa-check"></i> <strong>Scalable architecture</strong> — grow with your business</li>
+                                    </ul>
+                                    <button class="view-more-btn" aria-expanded="false">
+                                        <span>View More Features</span>
+                                        <i class="fas fa-chevron-down"></i>
+                                    </button>
+                                    <a href="contact.html" class="btn">Get Started</a>
+                                </div>
 
+                            </div>
+                        </div>
+                    </section>
     <!-- FAQ Section -->
     <section class="section faq parallax" id="faq">
         <div class="overlay"></div>
