--- a/portfolio.html
+++ b/portfolio.html
@@ -138,16 +138,16 @@
 
                   <div class="portfolio-card fade-in">
                     <span class="card-badge web-badge">Website</span>
-                    <img src="assets/Autoshow kenya fb banner (1).png" alt="Nairobi Legal" class="portfolio-img">
+                    <img src="assets/property.png" alt="Nairobi Legal" class="portfolio-img">
                     <div class="portfolio-content">
-                        <h3>Autoshow Kenya</h3>
-                        <p>E-commerce dealership, where a dealer can get to create account and create a store, where they can showcase/manage their store and inventory.</p>
+                        <h3>Property & Design</h3>
+                        <p>Propery and design website, built to capture the design aspect and also be a platform for land/house listings/sales.</p>
                         <!-- <div class="portfolio-tags">
                             <span class="portfolio-tag">WordPress</span>
                             <span class="portfolio-tag">Legal</span>
                             <span class="portfolio-tag">Consultation</span>
                         </div> -->
-                        <a href="https://autoshow-kenya.vercel.app/" target="_blank" class="portfolio-link">View Live Site <i class="fas fa-external-link-alt"></i></a>
+                        <a href="/home/sonny/Pictures/Screenshots/property.png" target="_blank" class="portfolio-link">View Live Site <i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
             </div>
