--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <div class="overlay"></div>
                         <div class="content">
                             <div class="section-title">
-                                <h2>Clear, Value-Backed Pricing</h2>
+                                <h2>Clear Pricing</h2>
                                 <p>Transparent investment—no hidden costs, no filler features.</p>
                             </div>
                             <div class="pricing-grid">
@@ -135,14 +135,14 @@
                                     <p>Essential online presence—fast, mobile-ready, lead-generating.</p>
                                     <ul class="features-list">
                                         <li><i class="fas fa-check"></i> <strong>7 purpose-built pages</strong> — Home, About, Services, Contact, etc.</li>
-                                        <li><i class="fas fa-check"></i> <strong>Mobile-optimized</strong> — loads in under 2s on Kenyan 4G</li>
-                                        <li><i class="fas fa-check"></i> <strong>WhatsApp + contact form</strong> — capture leads 24/7</li>
-                                        <li><i class="fas fa-check"></i> <strong>Basic SEO</strong> — metadata & sitemap for Google visibility</li>
+                                        <li><i class="fas fa-check"></i> <strong>Mobile-optimized</strong> — Optimized for different screen sizes.</li>
+                                        <li><i class="fas fa-check"></i> <strong>WhatsApp + contact form</strong> — capture leads 24/7.</li>
+                                        <li><i class="fas fa-check"></i> <strong>Basic SEO</strong> — metadata & sitemap for Google visibility.</li>
                                     </ul>
                                     <ul class="features-list extra-features" style="display: none;">
-                                        <li><i class="fas fa-check"></i> <strong>Easy self-updates</strong> — no developer needed for content changes</li>
+                                        <li><i class="fas fa-check"></i> <strong>Easy self-updates</strong> — no developer needed for content changes.</li>
                                         <li><i class="fas fa-check"></i> <strong>Professional email setup</strong> — use your@business.co.ke</li>
-                                        <li><i class="fas fa-check"></i> <strong>Secure cloud hosting</strong> — fast, reliable, included</li>
+                                        <li><i class="fas fa-check"></i> <strong>Secure cloud hosting</strong> — fast, reliable</li>
                                     </ul>
                                     <button class="view-more-btn" aria-expanded="false">
                                         <span>View More Features</span>
@@ -161,12 +161,12 @@
                                         <li><i class="fas fa-check"></i> <strong>Up to 15 custom pages</strong> — showcase services, portfolio, FAQs</li>
                                         <li><i class="fas fa-check"></i> <strong>Brand-aligned design</strong> — your colors, fonts, and tone</li>
                                         <li><i class="fas fa-check"></i> <strong>Advanced local SEO</strong> — rank for “in Nairobi” or “near me”</li>
-                                        <li><i class="fas fa-check"></i> <strong>Google Maps + social proof</strong> — build trust with real presence</li>
+                                        <li><i class="fas fa-check"></i> <strong>Google Business + social proof</strong> — build trust with real presence</li>
                                     </ul>
                                     <ul class="features-list extra-features" style="display: none;">
                                         <li><i class="fas fa-check"></i> <strong>Clean, secure code</strong> — no bloated templates or plugins</li>
-                                        <li><i class="fas fa-check"></i> <strong>Secure cloud hosting</strong> — fast, reliable, included</li>
-                                        <li><i class="fas fa-check"></i> <strong>Ongoing support options</strong> — choose a maintenance plan</li>
+                                        <li><i class="fas fa-check"></i> <strong>Secure cloud hosting</strong> — fast, reliable, optimized.</li>
+                                        <li><i class="fas fa-check"></i> <strong>Ongoing support options</strong> — maintenance plan</li>
                                     </ul>
                                     <button class="view-more-btn" aria-expanded="false">
                                         <span>View More Features</span>
@@ -192,7 +192,7 @@
                                         <li><i class="fas fa-check"></i> <strong>Discounts & promotions</strong> — run sales and coupons</li>
                                         <li><i class="fas fa-check"></i> <strong>Analytics integration</strong> — track sales and traffic</li>
                                         <li><i class="fas fa-check"></i> <strong>Comprehensive training</strong> — manage independently</li>
-                                        <li><i class="fas fa-check"></i> <strong>Secure cloud hosting</strong> — included</li>
+                                        <li><i class="fas fa-check"></i> <strong>Secure cloud hosting</strong> — fast, reliable, optimized</li> 
                                     </ul>
                                     <button class="view-more-btn" aria-expanded="false">
                                         <span>View More Features</span>
@@ -203,16 +203,18 @@
 
                                 <!-- Custom Web Applications -->
                                 <div class="pricing-card fade-in">
-                                    <h3>Custom Web Applications</h3>
+                                    <h3>Custom Applications</h3>
                                     <div class="price"><span>From</span> 250,000 <span>Kshs</span></div>
                                     <p>Digital systems built around your unique workflow.</p>
                                     <ul class="features-list">
                                         <li><i class="fas fa-check"></i> <strong>Built for your business</strong> — property, dealership, or shop operations</li>
                                         <li><i class="fas fa-check"></i> <strong>Role-based dashboards</strong> — staff see only what they need</li>
                                         <li><i class="fas fa-check"></i> <strong>Real-time reporting</strong> — track leads, sales, inventory daily</li>
-                                        <li><i class="fas fa-check"></i> <strong>Secure login & data</strong> — Firebase-backed authentication</li>
+                                        <li><i class="fas fa-check"></i> <strong>Live website sync</strong> — Production updates on your custom app, your website syncs.</li>
                                     </ul>
                                     <ul class="features-list extra-features" style="display: none;">
+                                        <li><i class="fas fa-check"></i> <strong>Automated workflows</strong> — reduce manual tasks and errors</li>
+                                        <li><i class="fas fa-check"></i> <strong>Secure login & data</strong> — Firebase-backed authentication</li>
                                         <li><i class="fas fa-check"></i> <strong>API-ready</strong> — connect to SMS, email, or future tools</li>
                                         <li><i class="fas fa-check"></i> <strong>Full training & docs</strong> — your team uses it independently</li>
                                         <li><i class="fas fa-check"></i> <strong>Cloud hosting</strong> — reliable uptime and fast load times</li>
