--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="w7OGhPIfhzv2-S4UGi4BEAJCbf3hyNGBImy-l1Pubmc" />
-    <meta name="description" content="Sonny Sayi Solutions helps Kenyan SMEs build digital foundations—including modern CRM systems like Salesforce—to streamline sales, support, and customer growth. Web, IT, and CRM solutions designed for real business impact.">
-    <meta name="keywords" content="Web Design Kenya, Business Website Nairobi, IT Consultancy Kenya, Salesforce Consultant Kenya, CRM for SMEs Kenya, Affordable CRM Nairobi, Digital Transformation Kenya, Sonny Sayi Solutions, Customer Relationship Management Kenya">
+    <meta name="description" content="Sonny Sayi Solutions helps Kenyan SMEs build digital foundations—including modern CRM systems—to streamline sales, support, and customer growth. Web, IT, and CRM solutions designed for real business impact.">
+    <meta name="keywords" content="Web Design Kenya, IT Solutions, IT Kenya, Salesforce CRM Consultant, Sonny Sayi Solutions CRM Consultant, Business Website Nairobi, IT Consultancy Kenya, Salesforce Consultant Kenya, CRM for SMEs Kenya, Affordable CRM Nairobi, Digital Transformation Kenya, Sonny Sayi Solutions, Customer Relationship Management Kenya">
     <meta name="author" content="Sonny Sayi Solutions">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Sonny Sayi Solutions | Web, IT & CRM Solutions for Kenyan Businesses</title>
+    <title>Sonny Sayi Solutions | Web, IT & CRM Solutions</title>
     <script type="application/ld+json">
   {
     "@context": "https://schema.org",
