--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="portfolio.css">
+    <link rel="icon" e/ptype="imagng" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
 </head>
 <body>
     <!-- Preloader -->
@@ -138,10 +143,11 @@
 
                   <div class="portfolio-card fade-in">
                     <span class="card-badge web-badge">Website</span>
-                    <img src="assets/property.png" alt="Nairobi Legal" class="portfolio-img">
+                    <img src="assets/Autoshow kenya fb banner (1).png" alt="Nairobi Legal" class="portfolio-img">
                     <div class="portfolio-content">
-                        <h3>Property & Design</h3>
-                        <p>Propery and design website, built to capture the design aspect and also be a platform for land/house listings/sales.</p>
+                        <h3>Autoshow Kenya Marketplace</h3>
+                        <p>Online automotive marketplace supporting multiple dealerships across Kenya, allowing each dealer to create a storefront,
+                            list vehicles, and connect with buyers seamlessly.</p>
                         <!-- <div class="portfolio-tags">
                             <span class="portfolio-tag">WordPress</span>
                             <span class="portfolio-tag">Legal</span>
