--- a/service.html
+++ b/service.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="service.css">
+    <link rel="icon" e/ptype="imagng" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
 </head>
 <body>
     <!-- Preloader -->
@@ -54,7 +59,7 @@
     <section class="section" id="services">
         <div class="content">
             <div class="section-title">
-                <h2>Services Built for Real Kenyan Businesses</h2>
+                <h2>Services Built for Kenyan Businesses</h2>
                 <p>No fluff. No over-engineering. Just clear, reliable technology that works as hard as you do.</p>
             </div>
             
@@ -70,17 +75,17 @@
                 <div class="service-content">
                     <div>
                         <p class="service-description">
-                            Your website is your 24/7 sales team, brand ambassador, and customer support desk—all in one. We build fast, mobile-optimized websites that load quickly on Safaricom networks, convert visitors into leads, and rank well on Google for local searches like “roofing company in Ruai” or “IT consultant Nairobi.”
+                            Your website is your 24/7 sales team, brand ambassador, and customer support desk—all in one. We build fast, mobile-optimized websites, convert visitors into leads, and rank well on Google for local searches like “roofing company in kisumu” or “IT consultant Nairobi.”
                         </p>
                         
                         <div class="benefits-box">
                             <h3><i class="fas fa-star"></i> Business Value Delivered</h3>
                             <ul class="benefits-list">
                                 <li><i class="fas fa-check-circle"></i> <strong>Instant credibility</strong>—84% of customers judge a business by its website</li>
-                                <li><i class="fas fa-check-circle"></i> <strong>Mobile-first design</strong>—fully responsive for Kenyan smartphone users</li>
+                                <li><i class="fas fa-check-circle"></i> <strong>Mobile-first design</strong>—fully responsive for smartphone users</li>
                                 <li><i class="fas fa-check-circle"></i> <strong>Lead capture 24/7</strong>—via WhatsApp button, contact forms, and call-to-action prompts</li>
                                 <li><i class="fas fa-check-circle"></i> <strong>Local SEO foundation</strong>—structured for Google visibility in your town or county</li>
-                                <li><i class="fas fa-check-circle"></i> <strong>Easy self-management</strong>—update your own content without developer fees</li>
+                                <li><i class="fas fa-check-circle"></i> <strong>Easy self-management</strong>—update your own content </li>
                             </ul>
                         </div>
                     </div>
@@ -91,7 +96,7 @@
                             <ul class="process-steps">
                                 <li><i class="fas fa-comment-alt"></i> Business goal alignment—what problem are we solving?</li>
                                 <li><i class="fas fa-pencil-ruler"></i> Clean, purpose-driven design mockups (no clutter)</li>
-                                <li><i class="fas fa-code"></i> Secure, lightweight development (Next.js or modern stack)</li>
+                                <li><i class="fas fa-code"></i> Secure, lightweight development</li>
                                 <li><i class="fas fa-mobile-alt"></i> Real-device testing on Kenyan 4G networks</li>
                                 <li><i class="fas fa-rocket"></i> Launch + 30-day support & training</li>
                             </ul>
@@ -305,7 +310,7 @@
                         <li>Remember who asked for a quote last month</li>
                         <li>Send birthday or service reminders automatically</li>
                         <li>Track which marketing channel brings the best clients</li>
-                        <li>Upsell to past customers (“Need new tiles for your second house?”)</li>
+                        <li>Upsell to past customers</li>
                     </ul>
                     <p>You don’t need complexity—just a simple, reliable way to stay top-of-mind.</p>
                 </div>
