--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" e/ptype="imagng" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     <title>Sonny Sayi Solutions | Web, IT & CRM Solutions</title>
     <script type="application/ld+json">
   {
@@ -131,7 +136,7 @@
                 <!-- Basic Website -->
                 <div class="pricing-card fade-in">
                     <h3>Basic Website</h3>
-                    <div class="price"><span>From</span> 45,000 <span>Kshs</span></div>
+                    <div class="price"><span>From</span> 50,000 <span>Kshs</span></div>
                     <p>Essential online presence—fast, mobile-ready, lead-generating.</p>
                     <ul class="features-list">
                         <li><i class="fas fa-check"></i> <strong>7 purpose-built pages</strong> — Home, About, Services, Contact, etc.</li>
@@ -155,7 +160,7 @@
                 <div class="pricing-card popular fade-in">
                     <div class="popular-badge">Most Popular</div>
                     <h3>Business Website</h3>
-                    <div class="price"><span>From</span> 60,000 <span>Kshs</span></div>
+                    <div class="price"><span>From</span> 65,000 <span>Kshs</span></div>
                     <p>For credibility, local SEO, and higher conversions.</p>
                     <ul class="features-list">
                         <li><i class="fas fa-check"></i> <strong>Up to 15 custom pages</strong> — showcase services, portfolio, FAQs</li>
@@ -178,7 +183,7 @@
                 <!-- E-commerce Website -->
                 <div class="pricing-card fade-in">
                     <h3>E-commerce Website</h3>
-                    <div class="price"><span>From</span> 180,000 <span>Kshs</span></div>
+                    <div class="price"><span>From</span> 150,000 <span>Kshs</span></div>
                     <p>Your 24/7 online store—secure, local, and scalable.</p>
                     <ul class="features-list">
                         <li><i class="fas fa-check"></i> <strong>200+ products</strong> — manage inventory, pricing, images</li>
@@ -365,7 +370,7 @@
                                 <option>Graphic Design</option>
                                 <option>Network Administration</option>
                                 <option>IT Consultancy</option>
-                                <option>Salesforce / CRM Setup</option>
+                                <option>CRM Setup</option>
                             </select>
                         </div>
                         <div class="form-group">
