--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/site.webmanifest" />
-    <title>Sonny Sayi Solutions | Web, IT & CRM Solutions</title>
+    <title>S.S Solutions | Web, IT & CRM Solutions</title>
     <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -137,21 +137,20 @@
                 <div class="pricing-card fade-in">
                     <h3>Basic Website</h3>
                     <div class="price"><span>From</span> 65,000 <span>Kshs</span></div>
-                    <p>Custom website plus branded brochure design and custom social media graphics — fast, mobile-ready, and lead-generating.</p>
-                   <ul class="features-list">
-    <li><i class="fas fa-check"></i> <strong>7 purpose-built pages</strong> — Home, About, Services, Contact, etc.</li>
-    <li><i class="fas fa-check"></i> <strong>Mobile-optimized</strong> — displays perfectly on all devices.</li>
-    <li><i class="fas fa-check"></i> <strong>WhatsApp + contact form</strong> — capture leads 24/7.</li>
-    <li><i class="fas fa-check"></i> <strong>Basic SEO</strong> — metadata & sitemap for Google visibility.</li>
-    <li><i class="fas fa-check"></i> <strong>Branded brochure design</strong> — professionally designed for print or digital sharing.</li>
-    <li><i class="fas fa-check"></i> <strong>Custom social media graphics</strong> — ready-to-use visuals for your social media pages.</li>
-</ul>
-<ul class="features-list extra-features" style="display: none;">
-  <li><i class="fas fa-check"></i> <strong>Website analytics setup</strong> — track visitor behavior and monitor performance easily.</li>
-    <li><i class="fas fa-check"></i> <strong>Professional email setup</strong> — use yourname@business.co.ke</li>
-    <li><i class="fas fa-check"></i> <strong>Secure cloud hosting</strong> — fast, reliable, and backed up.</li>
-</ul>
-
+                    <p>Essential online presence—fast, mobile-ready, lead-generating.</p>
+                    <ul class="features-list">
+                        <li><i class="fas fa-check"></i> <strong>7 purpose-built pages</strong>:Home, About, Services, Contact, etc.</li>
+                        <li><i class="fas fa-check"></i> <strong>Mobile-optimized</strong>:Optimized for different screen sizes.</li>
+                        <li><i class="fas fa-check"></i> <strong>WhatsApp + contact form</strong>:capture leads 24/7.</li>
+                        <li><i class="fas fa-check"></i> <strong>Branded brochure design</strong> — professionally designed for print or digital sharing.</li>
+                        <li><i class="fas fa-check"></i> <strong>Custom social media graphics</strong> — ready-to-use visuals for your social media pages.</li>
+                        <li><i class="fas fa-check"></i> <strong>Basic SEO</strong>:metadata & sitemap for Google visibility.</li>
+                    </ul>
+                    <ul class="features-list extra-features" style="display: none;">
+                        <li><i class="fas fa-check"></i> <strong>Website analytics setup</strong> — track visitor behavior and monitor performance easily.</li>
+                        <li><i class="fas fa-check"></i> <strong>Professional email setup</strong> — use your@business.co.ke</li>
+                        <li><i class="fas fa-check"></i> <strong>Secure cloud hosting</strong> — fast, reliable</li>
+                    </ul>
                     <button class="view-more-btn" aria-expanded="false">
                         <span>View More Features</span>
                         <i class="fas fa-chevron-down"></i>
@@ -432,5 +431,4 @@
     </footer>
     <script src="script.js"></script>   
 </body>
-
 </html>
