update index.html and add new video assets

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   <section id="hero" class="hero">
     <div class="hero-media">
       <video autoplay muted loop playsinline>
-        <source src="assets/MBW-1.mp4" type="video/mp4" />
+        <source src="assets/MBW-1.web.mp4" type="video/mp4" />
       </video>
     </div>
     <div class="hero-copy">
@@ -151,7 +151,7 @@
   <section id="capabilities" class="capability-sections">
     <section class="capability">
       <video autoplay muted loop playsinline>
-        <source src="assets/Property Design.mp4" type="video/mp4" />
+        <source src="assets/PropertyDesign.web.mp4" type="video/mp4" />
       </video>
       <div class="capability-text">
         <h3>Web Platforms</h3>
