--- a/service.html
+++ b/service.html
@@ -26,15 +26,23 @@
 
 <!-- ================= HEADER ================= -->
 <header class="site-header" role="banner">
-  <nav class="nav" role="navigation" aria-label="Main navigation">
-    <a href="index.html" class="logo" aria-label="Return to homepage">S<span>.</span>S Solutions</a>
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="service.html" class="active" aria-current="page">Services</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+      <nav class="nav">
+      <a href="index.html" class="nav-logo">
+  <img src="/assets/bg2-removebg-preview.png" alt="Sonny Sayi Solutions" class="nav-logo-img" />
+  Sonny <span>Sayi</span> Solutions
+</a>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a class="active" href="service.html">Services</a></li>
+        <li><a href="#capabilities">Portfolio</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+      <button class="nav-toggle" aria-label="Toggle menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+    </nav>
 </header>
 
 <!-- ================= HERO ================= -->
