--- a/service.html
+++ b/service.html
@@ -48,13 +48,13 @@
 <!-- ================= HERO ================= -->
 <section class="service-hero" aria-labelledby="hero-heading">
   <div class="hero-inner">
-    <h1 id="hero-heading">Digital services built around clarity, not noise.</h1>
+    <h1 id="hero-heading">Digital services built around clarity not noise.</h1>
     <p>
       Most businesses don’t struggle because of lack of effort.<br>
       They struggle because their tools don’t work together.
     </p>
     <p>
-      Our services focus on structure, understanding, and systems that reduce daily friction — not surface-level visuals.
+      Our services focus on structure, understanding and systems that reduce daily friction — not surface-level visuals.
     </p>
   </div>
 </section>
@@ -87,7 +87,7 @@
       </div>
     </div>
     <div class="service-media">
-      <img src="assets/placeholders/web-system.gif" alt="Illustration of a structured website system with clear navigation and content flow">
+      <img src="assets/" alt="Illustration of a structured website system with clear navigation and content flow">
     </div>
   </article>
 
@@ -115,7 +115,7 @@
       </div>
     </div>
     <div class="service-media">
-      <img src="assets/placeholders/branding.gif" alt="Brand identity system showing consistent colors, typography, and logo usage">
+      <img src="assets/Branding-Service.gif" alt="Brand identity system showing consistent colors, typography, and logo usage">
     </div>
   </article>
 
