--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <ul class="nav-links">
         <li><a class="active" href="index.html">Home</a></li>
         <li><a href="service.html">Services</a></li>
-        <li><a href="#capabilities">Portfolio</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
       <button class="nav-toggle" aria-label="Toggle menu">
