--- a/service.html
+++ b/service.html
@@ -34,7 +34,7 @@
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a class="active" href="service.html">Services</a></li>
-        <li><a href="#capabilities">Portfolio</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
       <button class="nav-toggle" aria-label="Toggle menu">
@@ -87,7 +87,7 @@
       </div>
     </div>
     <div class="service-media">
-      <img src="assets/" alt="Illustration of a structured website system with clear navigation and content flow">
+      <img src="assets/digital-footer.gif" alt="Illustration of a structured website system with clear navigation and content flow">
     </div>
   </article>
 
@@ -143,7 +143,7 @@
       </div>
     </div>
     <div class="service-media">
-      <img src="assets/placeholders/crm-flow.gif" alt="Simple CRM interface showing lead tracking and follow-up reminders">
+      <img src="assets/CRM-Workflow.gif" alt="Simple CRM interface showing lead tracking and follow-up reminders">
     </div>
   </article>
 
@@ -166,7 +166,7 @@
       </div>
     </div>
     <div class="service-media">
-      <img src="assets/placeholders/network.gif" alt="Network architecture diagram showing simplified, reliable setup">
+      <img src="assets/Tech-infra.gif" alt="Network architecture diagram showing simplified, reliable setup">
     </div>
   </article>
 
