--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@ FOOTER
   <div class="footer-grid">
     <div class="footer-col">
       <h3>Sonny Sayi Solutions</h3>
-      <p>Helping Kenyan SMEs digitize operations—with websites, IT systems, and CRM strategies that drive customer growth and operational clarity.</p>
+      <p>Helping SMEs digitize operations—with websites, IT systems and CRM strategies that drive customer growth and operational clarity.</p>
       <div class="footer-social">
         <a href="https://www.linkedin.com/in/sonny-sayi-160835a7/" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
         <a href="https://www.facebook.com/profile.php?id=61577290837456" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
@@ -511,7 +511,7 @@ FOOTER
     </div>
   </div>
   <div class="footer-bottom">
-    <p>&copy; 2026 Sonny Sayi Solutions — Digital Clarity for Kenyan Business Growth</p>
+    <p>&copy; 2026 Sonny Sayi Solutions — Digital Clarity for Global Business Growth</p>
   </div>
 </footer>
 
