--- a/service.html
+++ b/service.html
@@ -181,9 +181,9 @@
 <section class="fit-section" aria-labelledby="fit-heading">
   <h2 id="fit-heading">Who these services may not be for</h2>
   <ul>
-    <li><i class="fa-solid fa-xmark" aria-hidden="true"></i> Businesses looking for the cheapest option</li>
-    <li><i class="fa-solid fa-xmark" aria-hidden="true"></i> One-off visuals without long-term thinking</li>
-    <li><i class="fa-solid fa-xmark" aria-hidden="true"></i> Tools without understanding</li>
+    <li>Businesses looking for the cheapest option</li>
+    <li>One-off visuals without long-term thinking</li>
+    <li>Tools without understanding</li>
   </ul>
   <p>Our work is designed for businesses that value clarity, structure, and sustainable growth.</p>
 </section>
@@ -195,7 +195,7 @@ FOOTER
   <div class="footer-grid">
     <div class="footer-col">
       <h3>Sonny Sayi Solutions</h3>
-      <p>Helping Kenyan SMEs digitize operations—with websites, IT systems, and CRM strategies that drive customer growth and operational clarity.</p>
+      <p>Helping SMEs digitize operations—with websites, IT systems, and CRM strategies that drive customer growth and operational clarity.</p>
       <div class="footer-social">
         <a href="https://www.linkedin.com/in/sonny-sayi-160835a7/" target="_blank" rel="noopener" aria-label="LinkedIn profile"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a>
         <a href="https://www.facebook.com/profile.php?id=61577290837456" target="_blank" rel="noopener" aria-label="Facebook page"><i class="fab fa-facebook-f" aria-hidden="true"></i></a>
@@ -240,7 +240,7 @@ FOOTER
   </div>
 
   <div class="footer-bottom">
-    <p>&copy; 2026 Sonny Sayi Solutions — Digital Clarity for Kenyan Business Growth</p>
+    <p>&copy; 2026 Sonny Sayi Solutions — Digital Clarity for Global Business Growth</p>
   </div>
 </footer>
 
